--- a/about.html
+++ b/about.html
@@ -609,13 +609,12 @@
     <!-- ==========================
             SCRIPT SECTION START
         ========================== -->
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
-    <script defer type="text/javascript"
-        src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"></script>
+
     <!-- modal -->
-    <script defer type="text/javascript"
-        src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"></script>
     <!-- modal -->
 
     <!-- Counter -->
@@ -626,13 +625,14 @@
     <script defer type="text/javascript" src="./js/instagram.js"></script>
     <script defer type="text/javascript" src="./js/history.js"></script>
     <!-- Counter -->
-
     <!-- Nav -->
     <script defer type="text/javascript" src="./js/nav.js"></script>
     <!-- Nav -->
     <!-- Sticky -->
     <script defer type="text/javascript" src="./js/stick.js"></script>
     <!-- Sticky -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
     <!-- ==========================
             SCRIPT SECTION END
         ========================== -->
