--- a/index.html
+++ b/index.html
@@ -260,9 +260,12 @@
   ====================-->
 
     <section class="watch-area">
+        <div class="shape">
+            <img src="/img/shapes/we-specialised-right.png" alt="shapes">
+        </div>
         <div class="container">
             <div class="row">
-                <div class="col-xl-6 col-lg-12 col-12">
+                <div class="col-xl-6 col-lg-6 col-md-12 col-12">
                     <div class="first-video">
                         <div class="video1">
                             <!-- <video autoplay muted loop>
@@ -285,7 +288,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-6 col-lg-12 col-12">
+                <div class="col-xl-6 col-lg-6 col-md-12 col-12 odr">
                     <div class="second-video">
                         <div class="content">
                             <h6> Our Portfolio</h6>
@@ -347,25 +350,39 @@
     <!-- =================
     YES VIDEO SECTION START
     ===================== -->
-    <section class="bigleap-video-area">
+    <section class="key-projects-area">
         <div class="container">
             <div class="swiper bigleap">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="content">
                             <h6>Key Projects</h6>
-                            <h2>Lorem ipsum dolor sit amet </h2>
+                            <h2>Lorem ipsum <br> dolor sit amet </h2>
                             <p>Take a deep dive into some of our favorite projects. From established corporations to
                                 startups gearing to launch, we’ve seen a lot of our partners win – and we're excited to
                                 see you thrive too.</p>
                         </div>
                         <div class="videos">
 
+                            <iframe
+                                src="https://www.youtube.com/embed/xiW4HMDR1eo?autoplay=1&mute=1&loop=1&controls=0&disablekb=1&modestbranding=1&rel=0&showinfo=0&playlist=xiW4HMDR1eo"
+                                title="YouTube video player" frameborder="0" allow="autoplay; encrypted-media"
+                                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                            </iframe>
+
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="content">
+                            <h6>Key Projects</h6>
+                            <h2>Lorem ipsum dolor sit amet </h2>
+                        </div>
+                        <div class="videos">
 
                             <iframe
-                                src="https://www.youtube.com/embed/Li2mhnCfPlY?autoplay=1&mute=1&loop=1&controls=0&disablekb=1&modestbranding=1&rel=0&showinfo=0"
+                                src="https://www.youtube.com/embed/xiW4HMDR1eo?autoplay=1&mute=1&loop=1&controls=0&disablekb=1&modestbranding=1&rel=0&showinfo=0&playlist=xiW4HMDR1eo"
                                 title="YouTube video player" frameborder="0" allow="autoplay; encrypted-media"
-                                allowfullscreen style="pointer-events: none;">
+                                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
                             </iframe>
 
                         </div>
@@ -377,25 +394,10 @@
                         </div>
                         <div class="videos">
 
-                            <iframe width="560" height="315"
-                                src="https://www.youtube.com/embed/Li2mhnCfPlY?autoplay=1&mute=1&controls=0&disablekb=1&modestbranding=1&rel=0&showinfo=0"
+                            <iframe
+                                src="https://www.youtube.com/embed/xiW4HMDR1eo?autoplay=1&mute=1&loop=1&controls=0&disablekb=1&modestbranding=1&rel=0&showinfo=0&playlist=xiW4HMDR1eo"
                                 title="YouTube video player" frameborder="0" allow="autoplay; encrypted-media"
-                                allowfullscreen style="pointer-events: none;">
-                            </iframe>
-
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="content">
-                            <h6>Key Projects</h6>
-                            <h2>Lorem ipsum dolor sit amet </h2>
-                        </div>
-                        <div class="videos">
-
-                            <iframe width="560" height="315"
-                                src="https://www.youtube.com/embed/Li2mhnCfPlY?autoplay=1&mute=1&controls=0&disablekb=1&modestbranding=1&rel=0&showinfo=0"
-                                title="YouTube video player" frameborder="0" allow="autoplay; encrypted-media"
-                                allowfullscreen style="pointer-events: none;">
+                                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
                             </iframe>
 
                         </div>
@@ -921,27 +923,15 @@
     <!-- ==========================
             SCRIPT SECTION START
         ========================== -->
+
     <!-- modal -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"></script>
     <!-- modal -->
-    <!-- <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"></script> -->
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
-    <!-- <script defer type="text/javascript"
-        src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"></script> -->
-    <!-- modal -->
-    <!-- <script defer type="text/javascript"
-        src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script> -->
-    <!-- modal -->
 
     <!-- Counter -->
     <script defer type="text/javascript" src="./js/counter.js"></script>
@@ -962,7 +952,7 @@
     <!-- Sticky -->
     <!-- ==========================
             SCRIPT SECTION END
-        ========================== -->
+         ========================== -->
 
 
 </body>
