--- a/service-detail-page.html
+++ b/service-detail-page.html
@@ -145,9 +145,9 @@
  HEADER SECTION START
  =================== -->
 
-    <section class="header-area">
+    <section class="service-details-first-area">
         <div class="container">
-            <div class="row header">
+            <div class="row service-details-first">
                 <div class="col-xl-4 col-lg-4 col-md-12 col-12">
                     <div class="image">
                         <img src="/img/services/detail-image.png" alt="">
@@ -456,32 +456,18 @@
         ========================== -->
 
     <!-- modal -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
-    <!-- modal -->
-    <script defer type="text/javascript"
-        src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"></script>
-    <!-- modal -->
-    <script defer type="text/javascript"
-        src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"></script>
     <!-- modal -->
 
-    <!-- Counter -->
-    <script defer type="text/javascript" src="./js/counter.js"></script>
-    <!-- Counter -->
     <!-- Nav -->
     <script defer type="text/javascript" src="./js/nav.js"></script>
     <!-- Nav -->
     <!-- Sticky -->
     <script defer type="text/javascript" src="./js/stick.js"></script>
     <!-- Sticky -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <!-- ==========================
             SCRIPT SECTION END
         ========================== -->
